# zendb

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  readme.md
database/: db.sql
src/: create.rs  delete.rs  find.rs  lib.rs  main.rs  schema.rs  update.rs
src/method/: methods.rs  types.rs
