[package]
name = "rusty-postgres"
version = "0.1.6-beta"
edition = "2021"
authors = ["hariprasath"]
description = "A lightwight ORM and Query Builder for postgres"
license = "MIT"
repository = "https://github.com/HashiramaSenjuhari/zendb"
homepage = "https://crates.io/crates/rusty-postgres"
documentation = "https://docs.rs/rusty-postgres/latest/"

[dependencies]
# postgres = "0.19.9"
postgres = { version = "0.19.9", features = ["with-uuid-1", "with-chrono-0_4"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
uuid = { version = "1.11.0" }
chrono = "0.4.39"
rand = "0.8.5"
regex = "1.11.1"
# tokio = { version = "1.43.0", optional = true, features = ["full"] }
# geo = "0.16.0"

[features]
default = [
  "sync",
  "postgres",
  "serde",
  "serde_json",
  "uuid",
  "chrono",
  "rand",
  "regex",
]
full_search = []
ranked_search = []
count = []
similar_search = []
geography = []
brin_index = []
partition = []
horizontal_split = []
# async = ["tokio"]
# sync = []
