[package]
name = "rusty-postgres"
version = "0.1.14-beta"
edition = "2021"
authors = ["hariprasath"]
description = "A lightwight ORM and Query Builder for postgres"
license = "MIT"
repository = "https://github.com/HashiramaSenjuhari/zendb"
homepage = "https://crates.io/crates/rusty-postgres"
documentation = "https://docs.rs/rusty-postgres/latest/"

[dependencies]
# postgres = "0.19.9"
postgres = { version = "0.19.9", features = ["with-uuid-1", "with-chrono-0_4"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
uuid = { version = "1.11.0" }
chrono = { version = "0.4.39" }
rand = { version = "0.8.5" }
regex = { version = "1.11.1" }
tokio-postgres = { version = "0.7.13", features = [
  "with-uuid-1",
  "with-chrono-0_4",
], optional = true }
tokio = { version = "1.43.0", features = ["full"], optional = true }

# tokio = { version = "1.43.0", features = ["full"] }
# geo = "0.16.0"

[features]
default = []

full_search = []
ranked_search = []
count = []
similar_search = []
geography = []
brin_index = []
partition = []
horizontal_split = []
full = [
  "full_search",
  "ranked_search",
  "count",
  "similar_search",
  "geography",
  "brin_index",
  "partition",
  "horizontal_split",
]


async = ["tokio", "tokio-postgres"]
async_full_search = ["async"]
async_ranked_search = ["async"]
async_count = ["async"]
async_similar_search = ["async"]
async_geography = ["async"]
async_brin_index = ["async"]
async_partition = ["async"]
async_horizontal_split = ["async"]
async_index = ["async"]
async_full = [
  "async_full_search",
  "async_ranked_search",
  "async_count",
  "async_similar_search",
  "async_geography",
  "async_brin_index",
  "async_partition",
  "async_horizontal_split",
]
# async = ["tokio"]
# sync = []
